fixed column layouts and edited content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       p {
         font-family: 'Abel', sans-serif;
-        font-size: 30px;
+        font-size: 24px;
       }
       label {
         font-size: 24px;
@@ -155,35 +155,38 @@
               Hello World!
             </h1>
             <p>
-              I am a College Student who is pursing a Bachelors  in Computer Science.
-			  Currently, I am a junior taking upper level computer science courses. I do not know 
-			  what to say so I am going to add filler text proceeding this sentence.
-			  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			  Maecenas luctus placerat lorem, at ornare augue pretium nec. Nullam in urna non tellus 
-			  malesuada luctus a tempus mi. Nam nec lacinia quam.
+              I am a student at Queens College pursuing Computer Science. Currently, I am 
+			  a Junior. What makes me different from other students is I am not in College to get a degree; 
+			  I am here to learn. So in my spare time, I 
+			  am usually consolidating my craft. I am looking for an oppurtunity to grow my skills
+			  and learn from professionals.
 
 			</p>
           </div>
         </div>
 
-        <div id="education" class="col-xs-12 col-md-8 col-md-offset-2">
+        <div id="education" class="col-xs-12 col-md-12">
           <h1  > Academics </h1>
           <label data-toggle="collapse" data-target="#schoolsAndDegrees" aria-expanded="false" onclick="toggleSwitch('expandSchoolGlyph')" >Schools and Degrees
             <span  id="expandSchoolGlyph" style="margin-left: 50px;" class="glyphicon glyphicon-menu-down"></span> </labeL>
           <div id="schoolsAndDegrees" class="collapse collapsed-para">
-            John Bowne High School From 20xx - 20xx General High School Diploma <br>
-            Queens College - From 20xx - Present Pursing BS in Computer Science
+            <u>John Bowne High School</u> - General High School Diploma <br> <br>
+            <u>Queens College</u> - Computer Science, BA (2019) GPA: 3.0
           </div>
           <br />
           <p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			  Maecenas luctus placerat lorem, at ornare augue pretium nec. Nullam in urna non tellus 
-			  malesuada luctus a tempus mi. Nam nec lacinia quam, et volutpat libero. Sed viverra a e
-			  lit eu sagittis. Nulla nunc nunc, tempus eu faucibus quis, congue ac ante. Aliquam 
-			  condimentum a eros vel condimentum. Curabitur ac malesuada augue.
+			I love learning but when it comes to classroom-structured learning, I do sort of struggle.
+			For example, when in my discrete mathematics class when we were learning Mathematical 
+			Induction, I understood it rather easily but the problem was I did not understand what the point 
+			of the base case was or what Induction was used for. Fast-forward to summer, I was learning algorithms 
+			on my own but before I began, I reviewed Induction and Recursion again. The reason for Mathematical Induction 
+			was to prove a formula's correctness especiailly when it came to Recursion. Discrete mathemamtics immediately clicked 
+			and later in that summer when I decided to take Data Structures, I aced the class. The problem with classroom-strucuted
+			learning was that everyone is so stressed over passing the exams, that they forget the point of college. College is a place to
+			learn and grow as an individual not to pass tests and get a degree. 
           </p>
         </div>
-        <div id="projects" class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
+        <div id="projects" class="col-xs-10 col-xs-offset-1 col-md-12">
           <h1 class="heading"> Projects </h1>
           <label data-toggle="collapse" data-target="#oldPortExp" aria-expanded="false" onclick="toggleSwitch('OldPort')" style="width: 300px; margin-bottom: 30px;">Old Portfolio
             <span  id="OldPort" style="margin-left: 50px; float: right;" class="glyphicon glyphicon-menu-left"></span> </labeL>
@@ -206,7 +209,7 @@
           </div>
           <br>
         </div>
-        <div id="skills" class="col-xs-12 col-xs-offset-0 col-md-8 col-md-offset-2">
+        <div id="skills" class="col-xs-12 col-xs-offset-0 col-md-12">
           <h1 class="heading"> Skills and Technologies </h1>
           <img src="images/web.png" class="skillsPic">
           <img src="images/react.png" class="skillsPic">
