add a Resume folder for archived resumes and a resume link

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <li><a href="https://github.com/MuhammadBIlalQC/" class="link" id="GitHubLink" onclick="changeToNormalStyle('GitHubLink')" target="_blank"> GitHub </a></li>
             <li><a href="https://github.com/MuhammadBIlalQC/" class="link" id="LinkedInLink" onclick="changeToNormalStyle('LinkedInLink')" target="_blank"> LinkedIn </a></li>
             <li><a href="#" class="link" data-toggle="modal" data-target=".bs-example-modal-lg"  id="ContactLink" onclick="changeToNormalStyle('ContactLink')"> Contact </a></li>
+			<li><a href="Resume/Resume.pdf" class="link" id="ResumeLink" onclick="changeToNormalStyle('ResumeLink')" target="_blank"> Resume </a></li>
           </ul>
         </div>
       </div>
