--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Muhammad's Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Muhammad's Portfolio</title>
     <style>
         * {
             font-family: 'Open Sans', sans-serif;
@@ -14,6 +15,7 @@
         .navbar {
             background-color: rgba(0,0,0,0) !important;
             z-index: 10;
+            border: none;
         }
         
         .navbar a {
@@ -83,6 +85,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="http://muhammad-bilal.com/Resume/Resume.pdf" target="_blank">Resume</a>
+                    </li>
+                    <li>
                         <a href="https://github.com/MuhammadBIlalQC/" target="_blank">Github</a>
                     </li>
                     <li>
@@ -95,7 +100,7 @@
             </div>
         </div>
     </nav>
-    <img id="home-banner" src="images/home-banner.svg" style="visibility: hidden;"/>
+    <img id="home-banner" src="images/home-banner.svg" class="hidden-xs hidden-sm"/>
     <script>
         $(document).ready(function(){
             function fixHeight()
@@ -105,12 +110,7 @@
                     setTimeout(fixHeight, 200);
                 $('#filler').css('margin-top', height);
             }
-            if ($(document).width() > 768)
-            {
-                $('#home-banner').css('visibility', 'visible');
-                console.log($(document).width());
-                fixHeight();
-            }
+            fixHeight();
             
         });
     </script>
