--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6" id="cat-container">
-                    <img src="images/cat.svg" id="cat"  class="img-fluid rounded"  style="width: 100%;"> <!-- style="display: none" for animations -->
+                    <img src="images/cat.svg" id="cat"  class="img-fluid rounded"  style="display: none; width: 100%;"> <!-- style="display: none" for animations -->
             </div>
         </div>
         <div class="row">
