added progressbar animations

--- a/index.html
+++ b/index.html
@@ -136,36 +136,40 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6" style="margin-bottom: 40px;">
+            <div class="col-md-6" style="margin-bottom: 40px;" id="progress-bars-container">
+                <div id="progress-bars" style="display: none;">
                 <div class="my-progress">
                     <p>Problem Solving</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="Problem-Solving-Progress" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%"></div>
                     </div>
                 </div>
                 <div class="my-progress">
                     <p>Programming</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="Programming-Progress" class="progress-bar progress-bar-striped progress-bar-info" role="progressbar"  
+                             style="width: 0%"></div>
                     </div>
                 </div>
                 <div class="my-progress">
                     <p>Algorithms</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="Algorithms-Progress" class="progress-bar progress-bar-striped progress-bar-success" role="progressbar" 
+                             style="width: 0%"></div>
                     </div>
                 </div>
                 <div class="my-progress">
                     <p>Web Technolgoies</p> 
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="Web-Progress" class="progress-bar progress-bar-striped progress-bar-warning" role="progressbar" style="width: 0%"></div>
                     </div>
                 </div>
                 <div class="my-progress">
                     <p>Hard Work</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="Hard-Work-Progress" class="progress-bar progress-bar-striped progress-bar-danger" role="progressbar" style="width: 0%"></div>
                     </div>
+                </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
