added animation for 2nd picture and experience

--- a/index.html
+++ b/index.html
@@ -172,12 +172,13 @@
                 </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-md-6">
-                <img src="images/computer-2583383_960_720.jpg" style="max-width: 100%; max-height: 100%;" class="img-thumbnail" />
+            <div class="col-xs-12 col-md-6" id="2nd-Pic-container">
+                <img id="2nd-Pic" style="display: none;" src="images/computer-2583383_960_720.jpg" style="max-width: 100%; max-height: 100%;" class="img-thumbnail" />
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-md-12" id="experience-section">
+            <div class="col-xs-12 col-md-12" id="experience-container">
+                <div id="experience" style="display: none;">
                 <h1 style="width: 100%;text-align: center;">Experience</h1>
                 <div class="experience-li">
                     <h2 class="text-primary">Alzerina Jewelry <span class="text-muted">[Front End Engineer]</span></h2>
@@ -201,11 +202,12 @@
                     </p>
                 </div>
             </div>
+            </div>
         </div>
     </div>
     
     <div class="container-fluid" style="width: 100%; padding: 0px;">
-        <ul class="nav nav-pills" id="footer">
+        <ul class="nav nav-pills" id="footer" style="display: none;">
             <li role="presentation">
                 <a href="https://github.com/MuhammadBIlalQC/" target="_blank">GitHub</a>
             </li>
