Added Food and Store Section under Experience

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
                         media posting.
                     </p>
                 </div>
+				<div class="experience-li">
+                    <h2 class="text-primary">Food and Store <span class="text-muted">[Personal Full Stack Project]</span></h2>
+                    <p>
+                        Basic Website created using HTML, CSS, JavaScript, jQuery, Node.js and Express.js <br />
+						<a href="https://stormy-spire-47740.herokuapp.com/" target="_blank" >Link can be found here</a>
+                    </p>
+                </div>
             </div>
             </div>
         </div>
