typo and removed 1 timeline element

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h1>Bachelour's in Computer Science</h1>
+				<h1>Bachelor's in Computer Science</h1>
 				<p></p>
 				<span class="cd-date">May, 2019</span>
 			</div> <!-- cd-timeline-content -->
@@ -210,15 +210,6 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-location">
-			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content">
-				<h1>First Day of College!</h1>
-				<span class="cd-date">Augest, 2015</span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
