--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 			<div class="cd-timeline-content">
 				<h1>Food and Store Project</h1>
-				<p></p>
+				<h2><a href="https://bilal-foodandstore.herokuapp.com/" target="_blank">Link to Website</a></h2>
 				<span class="cd-date">December, 2017</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
