add socialhub demo link to page

--- a/index.html
+++ b/index.html
@@ -188,7 +188,19 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
+        
 		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-location">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h1>SocialHub Project</h1>
+                <h2><a href="https://bilal-socialhubdemo.herokuapp.com" target="_blank">Link to Website</a></h2>
+				<span class="cd-date">December, 2017</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+		<div class="cd-timeline-block">
+            
 			<div class="cd-timeline-img cd-picture">
 			</div> <!-- cd-timeline-img -->
 
@@ -199,16 +211,6 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-location">
-			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content">
-				<h1>SocialHub Project</h1>
-				<p></p>
-				<span class="cd-date">Augest, 2017</span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
 
 
 		<div class="cd-timeline-block">
