--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     </h1>
                     <br/>
                     <p>
-                        My skills lay around the realm of mathematics and algorithms. I am currently in college pursing a bachelour’s in Computer Science in Queens College.
-
-                        I am an ambitious learner, always looking to expand my list of skills. When given the task of projects, I always put time and effort into making sure it is the best possible product. Ensuring all resources and skills are put to work, as well as learning new skills along the way, making the finished as close to perfect as possible.
+                        I am currently pursing a degree in Computer Science. My interests lay around the realm of security, data, design, mathematics and algorithms.
+                        I am an ambitious learner, always looking to expand my list of skills. When given the task of projects, I always put time and effort into making sure it is the best possible product.
+						Ensuring all resources and skills are put to work, as well as learning new skills along the way, making the finished product as close to perfect as possible.
                     </p>
                 </div>
             </div>
