--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="nav-text" href="http://muhammad-bilal.com/Resume/Resume.pdf" target="_blank">Resume</a>
+                        <a class="nav-text" href="https://muhammad-bilal.com/Resume/Resume.pdf" target="_blank">Resume</a>
                     </li>
                     <li>
                         <a class="nav-text" href="https://github.com/MuhammadBIlalQC/" target="_blank">Github</a>
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6" id="cat-container">
-                    <img src="http://muhammad-bilal.com/images/cat.svg" id="cat"  class="img-fluid rounded"  style="display: none; max-width: 60%;"> <!-- style="display: none" for animations -->
+                    <img src="https://muhammad-bilal.com/images/cat.svg" id="cat"  class="img-fluid rounded"  style="display: none; max-width: 60%;"> <!-- style="display: none" for animations -->
             </div>
             <div class="row">
             <div class="col-md-offset-3 col-md-6" style="margin-bottom: 40px;" id="progress-bars-container">
@@ -262,7 +262,7 @@
                         <a style="color: white;" href="#">Contact</a>
                     </li>
                     <li role="presentation">
-                        <a style="color: white;" href="http://muhammad-bilal.com/Resume/Resume.pdf" target="_blank">Resume</a>
+                        <a style="color: white;" href="https://muhammad-bilal.com/Resume/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
         </div>
