--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
             <div class="row" style="margin-top: 40px;">
                 <div class="col-md-offset-1 col-md-3">
-                    <img id="boy-studying" src="boy-studying.png" />
+                    <img id="boy-studying" src="https://muhammad-bilal.com/images/boy-studying.png" />
                 </div>
                 <div class="col-md-offset-1 col-md-3">
                     <h3 style="font-size: 40px; font-family: 'Calligraffitti', cursive;, sans-serif; line-height:60px;" id="student-text">
@@ -148,7 +148,7 @@
                     </h3>
                 </div>
                 <div class="col-md-offset-1 col-md-3">
-                    <img id="teacher" src="teacher.png" />
+                    <img id="teacher" src="https://muhammad-bilal.com/images/teacher.png" />
                 </div>
             </div>
             <div class="row" style="margin-top: 40px;">
