Updated dead links

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </h3>
                 </div>
                 <div class="col-md-offset-1 col-md-3">
-                    <img id="teacher" src="https://muhammad-bilal.com/images/teacher.png" />
+                    <img id="teacher" src="/images/teacher.png" />
                 </div>
             </div>
             <div class="row" style="margin-top: 40px;">
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6" id="cat-container">
-                    <img src="https://muhammad-bilal.com/images/cat.svg" id="cat"  class="img-fluid rounded"  style="display: none; max-width: 60%;"> <!-- style="display: none" for animations -->
+                    <img src="/images/cat.svg" id="cat"  class="img-fluid rounded"  style="display: none; max-width: 60%;"> <!-- style="display: none" for animations -->
             </div>
             <div class="row">
             <div class="col-md-offset-3 col-md-6" style="margin-bottom: 40px;" id="progress-bars-container">
